--- a/Style/headerandfooter.css
+++ b/Style/headerandfooter.css
@@ -37,17 +37,22 @@ header ul{
 
 
 header  li {
-    margin-right: 70px;
+    margin-right: 20px;
     padding: 20px;
     list-style-type: none;
     color: black;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 20px;
+    display: flex;
+    text-align: center;
+
 }
 
 header li a {
     text-decoration: none;
     color: black;
+    display: flex;
+    width: 140px;
 }
 
 header .logo a {
@@ -55,6 +60,10 @@ header .logo a {
     color: black;
     font-size: 40px;
     text-align: left;
+}
+
+header .logo {
+    margin-left: 30px;
 }
 
 header li:hover {
@@ -128,7 +137,5 @@ footer i {
         font-size: 20px;
     }
 
-    header #meny {
-    }
 }
 
