--- a/Style/headerandfooter.css
+++ b/Style/headerandfooter.css
@@ -15,7 +15,7 @@ header {
     display: grid;
     margin: 0;
     text-decoration: none;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
     position: relative;
 }
 
@@ -69,6 +69,7 @@ header .logo {
 
 header li:hover {
     text-decoration: underline;
+    text-decoration-thickness: 1px;
 }
 
 /*Footer desktop */
@@ -77,6 +78,7 @@ footer {
     background-color: rgba(127, 198, 115, 0.4);
     margin: 0;
     height: 300px;
+    margin-top: 50px;
 }
 footer ul {
     display: flex;
@@ -101,19 +103,24 @@ footer i {
         max-width: 100vw;
     }
 
+
     header {
-        /* grid-template-columns: 1fr 1fr; */
+        display: block;
+    }
+
+    header .logo {
+        margin: auto;
+        padding: 20px;
     }
 
     header ul {
         display: block;
-        position: absolute;
-        top: 50%;
-        right: 1000px;
+        margin-bottom: 0;
     }
 
     #menyListe {
         display: none;
+        z-index: 9;
     }
 
     footer {
@@ -132,8 +139,8 @@ footer i {
         text-align: right;
         font-size: 50px;
         position: absolute;
-        right: 20px;
-        top: 34%;
+        right: 40px;
+        top: 50px;
     }
     
 
