--- a/Style/post.css
+++ b/Style/post.css
@@ -17,13 +17,27 @@ main {
     padding: 50px;
     margin-left: 80px;
     margin-right: 80px;
-    background-color: rgba(127, 198, 115, 0.3);
+    /* background-color: rgba(127, 198, 115, 0.3); */
+    border: 0.1px solid black;
+    border-radius: 3px; 
+}
 
+.posts a {
+    padding: 7px 30px;
+    border-radius: 3px;
+    background-color: #7fc673;
+    text-decoration: none;
+    color: black;
+}
+
+.posts a:hover {
+    background-color: rgba(127, 198, 115, 0.8);
 }
 
 .posts p {
     font-size: 14px;
     width: 350px;
+    margin-bottom: 30px;
 }
 
 .posts h2 {
@@ -38,8 +52,13 @@ main {
     margin-top: 10px;
 }
 
+.posts button:hover {
+    background-color: rgba(127, 198, 115, 0.8);
+}
+
 main h1{
     text-align: center;
+    margin: 40px;
 }
 
 #blogPosts {
@@ -64,4 +83,17 @@ main h1{
 #lastInn {
     display: grid;
     margin: auto;
+}
+
+#lastInn button:hover {
+    background-color: rgba(127, 198, 115, 0.8);
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1124px){
+    #blogPosts {
+        grid-template-columns: 1fr;
+    }
+
+
 }
